--- a/app/index.html
+++ b/app/index.html
@@ -549,14 +549,14 @@
 			<section class="container" id="getting-started">
 				<h5 class="title">Getting Started</h5>
 				<p>There are some ways to get started. First, see all download options available below, then choose the most suitable option for your need. Now you should add the main file of the Ghast and the CSS Reset in the header of your project. Just that!</p>
-				<p><a class="button download" href="https://github.com/voident/ghast/archive/master.zip" title="Download Ghast">Download Ghast</a></p>
+				<p><a class="button" href="https://github.com/voident/ghast/archive/master.zip" title="Download Ghast">Download Ghast</a></p>
 				<div class="example">
 					<p><strong>Install with npm</strong></p>
 					<p>Ghast is also available to install using npm.</p>
-					<p><pre class="code prettyprint"><code class="code-content">$ npm install Ghast</code></pre></p>
+					<p><pre class="code prettyprint"><code class="code-content">$ npm install ghast</code></pre></p>
 					<p><strong>What's included</strong></p>
 					<p>Once downloaded, extract the compressed folder to see the main file in the uncompressed and minified version.</p>
-					<p><pre class="code prettyprint lang-md"><code class="code-content">Ghast/
+					<p><pre class="code prettyprint lang-md"><code class="code-content">ghast/
 ├── app/
 │   ├── index.html
 ├── css/
