Update demo file

--- a/app/index.html
+++ b/app/index.html
@@ -488,6 +488,7 @@
 									<li class="popover-item"><a class="popover-link" href="https://voident.github.io/#buttons" title="Buttons">Buttons</a></li>
 									<li class="popover-item"><a class="popover-link" href="https://voident.github.io/#lists" title="Lists">Lists</a></li>
 									<li class="popover-item"><a class="popover-link" href="https://voident.github.io/#forms" title="Forms">Forms</a></li>
+									<li class="popover-item"><a class="popover-link" href="https://voident.github.io/#switches" title="Switches">Switches</a></li>
 									<li class="popover-item"><a class="popover-link" href="https://voident.github.io/#tables" title="Tables">Tables</a></li>
 									<li class="popover-item"><a class="popover-link" href="https://voident.github.io/#grids" title="Grids">Grids</a></li>
 									<li class="popover-item"><a class="popover-link" href="https://voident.github.io/#codes" title="Codes">Codes</a></li>
@@ -701,9 +702,9 @@
 					<form action="javascript: void(0)">
 						<fieldset>
 							<label for="nameField">Name</label>
-							<input type="text" placeholder="CJ Patoilo" id="nameField">
+							<input type="text" placeholder="Your name" id="nameField">
 							<label for="commentField">Comment</label>
-							<textarea placeholder="Hi CJ &hellip;" id="commentField"></textarea>
+							<textarea placeholder="Are you a meme?" id="commentField"></textarea>
 							<div class="example-send-yourself-copy">
 								<input type="checkbox" id="confirmField">
 								<label class="label-inline" for="confirmField">Send a copy to yourself</label>
@@ -875,7 +876,6 @@
   color: #9575CD;
 }
 </code></pre></code></pre>
-				<p>See more examples of <strong>codes</strong> <a href="codes.html" title="Examples about codes">here</a>.</p>
 			</section>
 
 			<section class="container" id="utilities">
@@ -995,6 +995,7 @@
 						<li><a href="https://voident.github.io/index.html#buttons" title="Buttons">Buttons</a></li>
 						<li><a href="https://voident.github.io/index.html#lists" title="Lists">Lists</a></li>
 						<li><a href="https://voident.github.io/index.html#forms" title="Forms">Forms</a></li>
+						<li><a href="https://voident.github.io/index.html#switches" title="Switches">Switches</a></li>
 						<li><a href="https://voident.github.io/index.html#tables" title="Tables">Tables</a></li>
 						<li><a href="https://voident.github.io/index.html#grids" title="Grids">Grids</a></li>
 						<li><a href="https://voident.github.io/index.html#codes" title="Codes">Codes</a></li>
