--- a/app/index.html
+++ b/app/index.html
@@ -937,7 +937,7 @@
 		</main>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js"></script>
-		<script src="https://voident.github.io/js/script.js"></script>
+		<script src="https://voident.github.io/js/site.js"></script>
 
 	</body>
 </html>
