--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,8 @@
 		<link rel="image_src" href="https://voident.github.io/img/thumbnail.jpg">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
-		<link rel="stylesheet" href="ghast.min.css">
-		<link rel="icon" href="https://voident.github.io/img/favicon.png">
+		<link rel="stylesheet" href="ghast.css">
+		<link rel="icon" href="https://voident.github.io/img/favicon.ico">
 
 		<style>
 			/* Base
