Initial rework for 1.0

--- a/app/index.html
+++ b/app/index.html
@@ -36,49 +36,29 @@
 		<link rel="icon" href="https://voident.github.io/img/favicon.ico">
 
 		<style>
-			/* Base
-			// –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
 			img {
 			max-width: 100%;
 			}
-
 			.wrapper {
 			position: relative;
 			display: block;
 			width: 100%;
 			overflow: hidden;
 			}
-
 			.section {
 				padding-top: 40px;
 				padding-bottom: 40px;
 			}
-
-
-			/* Sections
-			// –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
 			.example .row, .example.row, .example form {
 			margin-bottom: 0;
 			}
 			.example h1, .example h2, .example h3, .example h4, .example h5, .example h6 {
 			margin-bottom: 1rem;
 			}
-
-
-			/* Footer
-			// –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
 			.footer .container {
 			padding-bottom: 0;
 			padding-top: 0;
 			}
-
-
-			/* Grid
-			// –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
 			.column-demo {
 			background: #d1d1d1;
 			display: block;
@@ -92,11 +72,6 @@
 			font-weight: 600;
 			letter-spacing: .1rem;
 			}
-
-
-			/* Tips
-			// –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
 			.button-blue {
 				background-color: #536DFE;
 				border-color: #536DFE;
@@ -107,35 +82,23 @@
 			.button-blue.clear {
 				color: #536DFE;
 			}
-
 			.button-large {
 				font-size: 1.4rem;
 				height: 4.5rem;
 				line-height: 4.5rem;
 				padding: 0 2rem;
 			}
-
 			.button-small {
 				font-size: .8rem;
 				height: 2.8rem;
 				line-height: 2.8rem;
 				padding: 0 1.5rem;
 			}
-
-
-			/* Typography
-			// –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
 			.heading-font-size {
 			font-size: 1.2rem;
 			color: #999;
 			letter-spacing: normal;
 			}
-
-
-			/* Snippets, Exemples
-			// –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
 			.example {
 			position: relative;
 			margin-top: 4rem;
@@ -176,9 +139,6 @@
 			left: 0;
 			max-height: none;
 			}
-
-
-			/* Share */
 			.share,
 			.share-list,
 			.share-list a {
@@ -203,17 +163,11 @@
 			.share-icon:hover {
 			background-color: #606c76;
 			}
-
 			@media (min-width: 40.0rem) {
 			.only-mobile {
 				display: none;
 			}
 			}
-
-
-			/* Prettify
-			// –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
 			pre.prettyprint {
 			border: 0 !important;
 			border-left: .3rem solid #6959ff !important;
@@ -255,7 +209,6 @@
 
 		<main class="wrapper">
 			<section class="hero is-medium">
-			  <!-- Hero header: will stick at the top -->
 			  <div class="hero-header">
 			    <header class="header">
 			      <div class="container">
@@ -275,9 +228,6 @@
 								<span class="header-item">
 			            <a href="http://ghast.xyz">Home</a>
 			          </span>
-								<!--<span class="header-item">
-			            <a href="http://docs.ghast.xyz/">Docs</a>
-			          </span>-->
 								<span class="header-item">
 			            <a href="http://blog.voident.xyz/">Blog</a>
 			          </span>
@@ -290,8 +240,6 @@
 			      </div>
 			    </header>
 			  </div>
-
-			  <!-- Hero content: will be in the middle -->
 			  <div class="hero-content">
 			    <div class="container">
 						<img class="svg" src="http://voident.github.io/img/logo.svg" alt="Logo">
@@ -304,7 +252,6 @@
             <p class="hero-buttons">
               <a href="#getting-started" class="button">Get Started</a>
               <a href="#examples" class="button outline">View Examples</a>
-              <!--<a href="http://docs.ghast.xyz" class="button outline">View Docs</a>-->
             </p>
 			    </div>
 			  </div>
@@ -312,7 +259,7 @@
 
 			<section class="container section" id="why">
 				<h5 class="title">So, why Ghast?</h5>
-				<p>Ghast was designed to provide everything you need to get started with your own website in a small, responsive package. It was built to be easy to understand, modify and adapt to your needs. We hope you'll like it!</p>
+				<p>Ghast was designed to provide everything you need to get started with your own website in a small, responsive package. It was built to be easy to understand, maintain and adapt to your needs. We hope you'll like it!</p>
 				<p>If you enjoy Ghast or think it's a cool project, help spread the word out by sharing it with your fam!</p>
 				<div class="share">
 					<ul class="share-list">
