heyyy more stuff

--- a/app/index.html
+++ b/app/index.html
@@ -32,10 +32,14 @@
 		<link rel="image_src" href="https://voident.github.io/img/thumbnail.jpg">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:300,300italic,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="ghast.css">
 		<link rel="icon" href="https://voident.github.io/img/favicon.ico">
 
 		<style>
+      p {
+        font-family: 'Merriweather', serif;
+      }
 			img {
 			max-width: 100%;
 			}
@@ -72,6 +76,9 @@
 			font-weight: 600;
 			letter-spacing: .1rem;
 			}
+      .button {
+        font-family: 'Noto Sans', Helvetica, Arial, sans-serif;
+      }
 			.button-blue {
 				background-color: #536DFE;
 				border-color: #536DFE;
@@ -307,12 +314,6 @@
         /* */
       }
 
-      /* My additional styles */
-
-      /*li.L0, li.L1, li.L2, li.L3,
-      li.L5, li.L6, li.L7, li.L8
-      { list-style-type: decimal !important }*/
-
       .prettyprint li {
         margin-bottom: .3rem;
       }
@@ -364,7 +365,8 @@
 
 			<section class="container section" id="why">
 				<h1 class="title">So, is Ghast for you?</h1>
-				<p>Ghast was designed to provide everything you need to get started with your own website in a small, responsive package. It was built to be easy to understand, maintain and adapt to your needs. We hope you'll like it!</p>
+				<p>Ghast was designed to provide everything you need to get started with your own website in a small, responsive package. It was built to be easy to understand, maintain and adapt to your needs.</p>
+        <br>
 				<p>If you enjoy Ghast or think it's a cool project, help spread the word out by sharing it with your fam!</p>
 				<div class="share">
 					<ul class="share-list">
